crates/ruff_python_parser/tests/snapshots/invalid_syntax@params_expected_after_star_separator.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/params_expected_after_star_separator.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..98,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..15,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..10,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 12..15,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 12..15,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 16..32,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 20..23,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 23..27,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 29..32,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 29..32,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 33..51,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 37..40,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 40..46,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 41..42,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 41..42,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 41..42,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                    is_context: false,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 48..51,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 48..51,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 52..71,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 56..59,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 59..66,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [
                            ParameterWithDefault {
                                range: 60..61,
                                node_index: NodeIndex(None),
                                parameter: Parameter {
                                    range: 60..61,
                                    node_index: NodeIndex(None),
                                    name: Identifier {
                                        id: Name("a"),
                                        range: 60..61,
                                        node_index: NodeIndex(None),
                                    },
                                    annotation: None,
                                    is_context: false,
                                },
                                default: None,
                            },
                        ],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 68..71,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 68..71,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 72..97,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 76..79,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 79..92,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: Some(
                            Parameter {
                                range: 83..91,
                                node_index: NodeIndex(None),
                                name: Identifier {
                                    id: Name("kwargs"),
                                    range: 85..91,
                                    node_index: NodeIndex(None),
                                },
                                annotation: None,
                                is_context: false,
                            },
                        ),
                    },
                    returns: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 94..97,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 94..97,
                                    },
                                ),
                            },
                        ),
                    ],
                    is_trailing_lambda: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | def foo(*): ...
  |         ^ Syntax Error: Expected one or more keyword parameter after `*` separator
2 | def foo(*,): ...
3 | def foo(a, *): ...
  |


  |
1 | def foo(*): ...
2 | def foo(*,): ...
  |         ^ Syntax Error: Expected one or more keyword parameter after `*` separator
3 | def foo(a, *): ...
4 | def foo(a, *,): ...
  |


  |
1 | def foo(*): ...
2 | def foo(*,): ...
3 | def foo(a, *): ...
  |            ^ Syntax Error: Expected one or more keyword parameter after `*` separator
4 | def foo(a, *,): ...
5 | def foo(*, **kwargs): ...
  |


  |
2 | def foo(*,): ...
3 | def foo(a, *): ...
4 | def foo(a, *,): ...
  |            ^ Syntax Error: Expected one or more keyword parameter after `*` separator
5 | def foo(*, **kwargs): ...
  |


  |
3 | def foo(a, *): ...
4 | def foo(a, *,): ...
5 | def foo(*, **kwargs): ...
  |            ^^^^^^^^ Syntax Error: Expected one or more keyword parameter after `*` separator
  |
